--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:ems="10"
-        android:hint="@string/name"
+        android:hint="@string/email"
         android:inputType="text"
         android:minHeight="48dp"
         android:layout_marginLeft="20dp"
