--- a/app/src/main/res/layout/activity_reg.xml
+++ b/app/src/main/res/layout/activity_reg.xml
@@ -26,7 +26,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="30dp"
         android:ems="10"
-        android:hint="@string/userName"
+        android:hint="@string/username_5lenght"
         android:padding="10dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
@@ -58,7 +58,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="15dp"
         android:ems="10"
-        android:hint="@string/password"
+        android:hint="@string/passw_6lenght"
         android:inputType="textPassword"
         android:padding="10dp"
         android:layout_marginLeft="20dp"
@@ -88,14 +88,14 @@
         android:layout_below="@id/userRePassword"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="15dp"
-        android:ems="10"
-        android:padding="10dp"
         android:layout_marginLeft="20dp"
+        android:layout_marginTop="15dp"
         android:layout_marginRight="20dp"
-        android:hint="@string/telefhone"
+        android:ems="10"
+        android:hint="@string/mobile_5lenght"
         android:inputType="phone"
-        android:minHeight="48dp" />
+        android:minHeight="48dp"
+        android:padding="10dp" />
 
     <Spinner
         android:id="@+id/orderType"
@@ -121,7 +121,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginRight="20dp"
         android:ems="10"
-        android:hint="@string/address"
+        android:hint="@string/address_5lenght"
         android:inputType="textPostalAddress|textMultiLine"
         android:maxLines="2"
         android:minHeight="48dp"
